--- a/src/main/resources/templates/car-register-purchase-result.html
+++ b/src/main/resources/templates/car-register-purchase-result.html
@@ -46,12 +46,10 @@
                 </tr>
             </table>
             <a th:href="registernewcartofleet">
-                <button class="goto_button">
-                    Ny Bil
-                </button></a>
-            <a href="homepage"><button class="goto_button">
-                Hjem
-            </button>
+                <button class="buttom">Ny Bil</button>
+            </a>
+            <a href="homepage">
+                <button class="buttom">Hjem</button>
             </a>
 
         </section>
