--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -56,7 +56,7 @@
             <br>
             <input type="number" name="accountNumber" PLACEHOLDER="XXXXXXXXXX">
             <br>
-            <input type="submit">
+            <input type="submit" class="buttom">
         </form>
     </div>
 </div>
