--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -42,7 +42,9 @@
 
             <div class="nav-valg">
                 <h3>Forretningsudviklere</h3>
+                <a href="all-cars">Vis oversigt over Alle biler</a>
                 <a href="rented-cars">Vis oversigt over udlejede biler</a>
+                <a href="available-cars">Vis oversigt over ledige biler</a>
                 <a href="finance">Vis pris på udlejede biler</a>
             </div>
 
