--- a/src/main/resources/templates/register-location-information.html
+++ b/src/main/resources/templates/register-location-information.html
@@ -30,7 +30,9 @@
                 </select>
             </div>
         </div>
-        <p><input type="submit" value="Videre" /></p>
+        <p>
+            <input type="submit" value="Videre" class="buttom"/>
+        </p>
         </form>
     </div>
 </div>
