--- a/src/main/resources/templates/return-car.html
+++ b/src/main/resources/templates/return-car.html
@@ -28,7 +28,10 @@
             Indtast stelnummer:
             <br>
             <input type="number" name="chassis-number-input">
-            <p><input type="submit" value="Register"> <input type="reset" value="Nulstil feltet" /></p>
+            <p>
+                <input type="submit" value="Register" class="buttom">
+                <input type="reset" value="Nulstil feltet" class="buttom"/>
+            </p>
         </form>
     </div>
 
