--- a/src/main/resources/templates/create-subscription-information.html
+++ b/src/main/resources/templates/create-subscription-information.html
@@ -66,7 +66,7 @@
             <input type="date" name="pickupDate">
             <br>
             <br>
-            <input type="submit">
+            <input type="submit" class="buttom">
         </form>
     </div>
 </div>
