--- a/src/main/resources/templates/damage-choose-chassis-number.html
+++ b/src/main/resources/templates/damage-choose-chassis-number.html
@@ -16,7 +16,7 @@
         <input type="text" name="chassis-number">
         <br>
         <br>
-        <input type="submit" value="Gå Videre">
+        <input type="submit" value="Gå Videre" class="buttom">
     </form>
 
 </div>
