--- a/src/main/resources/templates/register-advance-agreement.html
+++ b/src/main/resources/templates/register-advance-agreement.html
@@ -32,18 +32,19 @@
                 <div value="">Vælg afhentning</div>
                 <div class="">
                     <select th:field="*{locationId}">
-                <option  th:each="location: ${locations}"
-                th:text="${location.city}+',' + ${location.address}"
-                         th:value="${location.id}">
-                </option>
+                        <option  th:each="location: ${locations}"
+                             th:text="${location.city}+',' + ${location.address}"
+                                 th:value="${location.id}">
+                         </option>
                     </select>
+                </div>
             </div>
-    </div>
-           <p><input type="submit" value="Gem" /> <input type="reset" value="Nulstil felterne" /></p>
-            <a href="homepage"><button class="goto_button">
-                Hjem
-            </button>
-            </a>
+            <p>
+                <input type="submit" value="Gem" class="buttom" />
+                <input type="reset" value="Nulstil felterne" class="buttom"/></p>
+                <a href="homepage">
+                    <button class="buttom"> Hjem</button>
+                </a>
         </form>
     </div>
 </div>
