--- a/src/main/resources/templates/return-car-success.html
+++ b/src/main/resources/templates/return-car-success.html
@@ -13,28 +13,27 @@
 
 <div class="whiteboard">
     <div class="receipt">
-    <h3>Bilen blev succesfuldt opdateret</h3>
-    <form class="receipt-form">
-    <table class="skema">
-        <tr>
-        <th>Stelnummer</th>
-        <th>Model</th>
-        <th>Farve</th>
-        <th>Lejet</th>
-        </tr>
+        <h3>Bilen blev succesfuldt opdateret</h3>
+        <form class="receipt-form">
+            <table class="skema">
+                <tr>
+                <th>Stelnummer</th>
+                <th>Model</th>
+                <th>Farve</th>
+                <th>Lejet</th>
+                </tr>
 
-        <tr>
-            <td th:text="${car.getChassisNumber}"></td>
-            <td th:text="${car.getModel}"></td>
-            <td th:text="${car.getColor}"></td>
-            <td th:text="${car.isRentedToString(car.isRented)}"></td>
-        </tr>
+                <tr>
+                    <td th:text="${car.getChassisNumber}"></td>
+                    <td th:text="${car.getModel}"></td>
+                    <td th:text="${car.getColor}"></td>
+                    <td th:text="${car.isRentedToString(car.isRented)}"></td>
+                </tr>
 
-    </table>
-    </form>
+            </table>
+        </form>
 
-    <a href="homepage"> <button class="goto_button"> Hjem</button></a>
-
+         <a href="homepage"> <button class="buttom"> Hjem</button></a>
     </div>
 </div>
 </body>
