--- a/src/main/resources/templates/car-register-purchase-result.html
+++ b/src/main/resources/templates/car-register-purchase-result.html
@@ -54,6 +54,11 @@
 
         </section>
     </div>
+
+        <script>
+            document.getElementById('indkøb-bil').style.backgroundColor='white';
+        </script>
+
 </body>
 
 <br>
