--- a/src/main/resources/templates/car-register-purchase.html
+++ b/src/main/resources/templates/car-register-purchase.html
@@ -42,5 +42,10 @@
     </div>
 </div>
 </div>
+
+<script>
+    document.getElementById('indkøb-bil').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
