--- a/src/main/resources/templates/finance-page.html
+++ b/src/main/resources/templates/finance-page.html
@@ -32,10 +32,14 @@
         </table>
             </form>
     </div>
+</div>
+
     </div>
 </body>
 
-
+<script>
+    document.getElementById('finance').style.backgroundColor='white';
+</script>
 
 
 </html>
