--- a/src/main/resources/templates/register-advance-agreement-result.html
+++ b/src/main/resources/templates/register-advance-agreement-result.html
@@ -70,10 +70,14 @@
     </div>
     </div>
     </div>
+
+<script>
+    document.getElementById('forhåndsaftale').style.backgroundColor='white';
+</script>
+
 </body>
 
 <br>
 </div>
-
 <!--Side navigator -->
 </html>
