--- a/src/main/resources/templates/register-car.html
+++ b/src/main/resources/templates/register-car.html
@@ -33,5 +33,10 @@
 
 
 </div>
+
+<script>
+    document.getElementById('ny-lejeaftale').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
