--- a/src/main/resources/templates/result-damage.html
+++ b/src/main/resources/templates/result-damage.html
@@ -42,6 +42,10 @@
     </div>
 </div>
 
+<script>
+    document.getElementById('fejl-og-mangler').style.backgroundColor='white';
+</script>
+
 </body>
 
 </html>
