--- a/src/main/resources/templates/return-car-success.html
+++ b/src/main/resources/templates/return-car-success.html
@@ -34,5 +34,10 @@
          <a href="homepage"> <button class="buttom"> Hjem</button></a>
     </div>
 </div>
+
+<script>
+    document.getElementById('registrer-bil-modtaget').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
