--- a/src/main/resources/templates/return-car.html
+++ b/src/main/resources/templates/return-car.html
@@ -37,5 +37,9 @@
 
 </div>
 
+<script>
+    document.getElementById('registrer-bil-modtaget').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
