--- a/src/main/resources/templates/select-chassisnumber-of-cars-return.html
+++ b/src/main/resources/templates/select-chassisnumber-of-cars-return.html
@@ -39,6 +39,11 @@
 </a>
     </div>
 </div>
+
+<script>
+    document.getElementById('registrer-bil-modtaget').style.backgroundColor='white';
+</script>
+
 </body>
 
 
