--- a/src/main/resources/templates/select-chassisnumber-of-cars.html
+++ b/src/main/resources/templates/select-chassisnumber-of-cars.html
@@ -37,6 +37,17 @@
         </form>
     </div>
 </div>
+
+<script>
+    /*
+    if (document.getElementById('fejl-og-mangler')){
+        document.getElementById('fejl-og-mangler').style.backgroundColor='white';
+    }else{
+        document.getElementById('forhåndsaftale').style.backgroundColor='white';
+    }
+*/
+</script>
+
 </body>
 
 
