--- a/src/main/resources/templates/subscription-receipt.html
+++ b/src/main/resources/templates/subscription-receipt.html
@@ -96,5 +96,10 @@
     <a href="homepage"><button class="buttom">Forside</button></a>
   </div>
 </div>
+
+<script>
+  document.getElementById('ny-lejeaftale').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
