--- a/src/main/resources/templates/view-all-cars.html
+++ b/src/main/resources/templates/view-all-cars.html
@@ -39,5 +39,9 @@
     </div>
 </div>
 
+<script>
+    document.getElementById('all-cars').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
