--- a/src/main/resources/templates/view-available-cars.html
+++ b/src/main/resources/templates/view-available-cars.html
@@ -36,5 +36,9 @@
         </div>
     </div>
 
+    <script>
+        document.getElementById('available-cars').style.backgroundColor='white';
+    </script>
+
 </body>
 </html>
