--- a/src/main/resources/static/fragment.css
+++ b/src/main/resources/static/fragment.css
@@ -8,6 +8,8 @@
     flex-direction: column;
 }
 
+
+
 .side-nav{
     width: 300px;
     height: 100%;
@@ -28,6 +30,22 @@
     margin-bottom: 0;
     font-size: 25px;
 }
+
+.homepage{
+    background-color: #f2f2f2;
+    padding: 18px;
+    margin-bottom: 0;
+    font-size: 25px;
+}
+
+#home{
+    background-color: #f2f2f2;
+}
+
+.homepage a{
+    background-color: #f2f2f2;
+}
+
 
 .nav-valg a {
     background-color: #f2f2f2;
