--- a/src/main/resources/templates/create-renter-information.html
+++ b/src/main/resources/templates/create-renter-information.html
@@ -61,5 +61,9 @@
     </div>
 </div>
 
+<script>
+    document.getElementById('ny-lejeaftale').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
