--- a/src/main/resources/templates/create-subscription-information.html
+++ b/src/main/resources/templates/create-subscription-information.html
@@ -70,5 +70,10 @@
         </form>
     </div>
 </div>
+
+<script>
+    document.getElementById('ny-lejeaftale').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
