--- a/src/main/resources/templates/damage.html
+++ b/src/main/resources/templates/damage.html
@@ -50,5 +50,10 @@
 </div>
 </div>
 </div>
+
+    <script>
+        document.getElementById('fejl-og-mangler').style.backgroundColor='white';
+    </script>
+
 </body>
 </html>
