--- a/src/main/resources/templates/register-advance-agreement.html
+++ b/src/main/resources/templates/register-advance-agreement.html
@@ -48,5 +48,10 @@
         </form>
     </div>
 </div>
+
+<script>
+    document.getElementById('forhåndsaftale').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
