--- a/src/main/resources/templates/view-leased-cars.html
+++ b/src/main/resources/templates/view-leased-cars.html
@@ -37,5 +37,10 @@
         </a>
     </div>
 </div>
+
+<script>
+    document.getElementById('rented-cars').style.backgroundColor='white';
+</script>
+
 </body>
 </html>
