--- a/src/main/resources/templates/finance-page.html
+++ b/src/main/resources/templates/finance-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Stelnummer</title>
+    <title>Indtjening</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
     <link rel="stylesheet" th:href="@{style.css}" type="text/css">
@@ -20,14 +20,16 @@
             <form class="receipt-form">
                 <table class="skema">
         <tr>
-            <th>Forventet</th>
-            <th>Allerede indtjent</th>
+            <th>Allerede indtjent
+            </th>
+            <th>Forventet
+            </th>
             <th>Total</th>
         </tr>
         <tr>
+            <td> <p th:text="${totalrevenue}-${sumcurrentlease}"></p></td>
             <td> <p th:text="${sumcurrentlease}"></p></td>
-            <td> <p th:text="${alreadyearned}"></p></td>
-            <td> <p th:text="${alreadyearned}+${sumcurrentlease}"></p></td>
+            <td> <p th:text="${totalrevenue}"></p></td>
         </tr>
         </table>
             </form>
