så skulle det være iorden med finances

--- a/src/main/resources/templates/finance-page.html
+++ b/src/main/resources/templates/finance-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Indtjening</title>
+    <title>Omsætning leje</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{fragment.css}"  type="text/css">
     <link rel="stylesheet" th:href="@{style.css}" type="text/css">
