--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -7,7 +7,6 @@
 
 </head>
 <body>
-<br>
 
 <nav id="navigator">
     <!--Side navigator -->
@@ -16,10 +15,9 @@
         <nav class="side-nav">
 
             <div class="nav-valg ">
-                <a href="homepage">
+                <a id="homelogo" href="homepage">
                     <img id="home"  src="pictures/homethree.png">
                 </a>
-                <a href="/">Log Ud</a>
             </div>
 
 
@@ -48,6 +46,9 @@
                 <a href="finance">Vis pris på udlejede biler</a>
             </div>
 
+            <div class="nav-valg">
+                <a id="logud" href="/">Log ud</a>
+            </div>
 
         </nav>
 
