--- a/src/main/resources/templates/subscription-receipt.html
+++ b/src/main/resources/templates/subscription-receipt.html
@@ -16,7 +16,7 @@
     <h3>Oprettede lejeaftale</h3>
     <form class="receipt-form">
     <table class="skema">
-      <p>Udlejet Bil</p>
+      <p class="labelType">Udlejet Bil</p>
       <tr>
         <th>Stel nummer</th>
         <th>Model</th>
@@ -33,7 +33,7 @@
     </table>
 
     <table class="skema">
-      <p>Pickup Lokation</p>
+      <p class="labelType">Pickup Lokation</p>
       <tr>
         <th>Adresse</th>
         <th>By</th>
@@ -50,7 +50,7 @@
     </table>
 
     <table class="skema">
-      <p>Lejer Info</p>
+      <p class="labelType">Lejer Info</p>
       <tr>
         <th>Fornavn</th>
         <th>Efternavn</th>
@@ -73,7 +73,7 @@
     </table>
 
     <table class="skema">
-      <p>Abonnement Info</p>
+      <p class="labelType">Abonnement Info</p>
       <tr>
         <th>Selvrisiko</th>
         <th>Afhentnings Forsikring</th>
