--- a/src/main/resources/static/fragment.css
+++ b/src/main/resources/static/fragment.css
@@ -56,3 +56,16 @@
 #logo{
     width: 65%;
 }
+
+#home{
+    background-color: #f2f2f2;
+}
+
+#logud{
+    display: flex;
+    justify-content: center;
+    margin-top: 14%;
+    margin-bottom: 10%;
+}
+
+
