--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -41,6 +41,7 @@ h1{
     margin-left: 300px;
     padding-top: 100px;
     padding-bottom: 5px;
+
 }
 
 .receipt{
@@ -50,6 +51,7 @@ h1{
     flex-direction: column;
     justify-content: flex-start;
 }
+
 
 table{
     border-collapse: collapse;
@@ -142,6 +144,49 @@ th, td {
 
 .buttom:hover{
     background-color: #f2f2f2;
+}
+/*
+
+
+.skriftP{
+    background-color: #f2f2f2;
+    font-size: 150%;
+}
+
+.tabelInput{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 300px;
+}
+
+.boks{
+    display: flex;
+    flex-direction: row;
+}
+*/
+.inputstyledrop{
+    width: 40%;
+    background-color: #fff;
+    font-size: 120%;
+    padding: 4px 6px;
+}
+.inputstyle{
+    width: 20%;
+    background-color: #fff;
+    font-size: 120%;
+    padding: 4px 6px;
+}
+
+.labelType{
+    font-size: 120%;
+}
+.form-purchase-car p {
+    padding:0;
+    margin: 0;
+    margin-top: 2%;
+    font-size: 120%;
 }
 
 
