--- a/src/main/resources/templates/select-chassisnumber-of-cars.html
+++ b/src/main/resources/templates/select-chassisnumber-of-cars.html
@@ -19,21 +19,21 @@
         <div th:text="${error}" th:if="${error}" style="color: red"></div>
         <form action="#" th:action="@{'/selectchassisnumber?key='+${key}}" method="post">
             <div class="">
-                <div value="">Vælg bil</div>
+                <div value="" class="labelType">Vælg bil</div>
+                <br>
                 <div class="">
                     <form action="#" th:object="${car}" method="post">
-                    <select th:field="*{chassisNumber}">
+                    <select th:field="*{chassisNumber}" class="inputstyledrop">
                         <option  th:each="cars: ${availablecars}"
-                                 th:text="${cars.color}+ ',' + ${cars.model}+',' + ${cars.chassisNumber}"
+                                 th:text="${cars.color}+ ', ' + ${cars.model}+', ' + ${cars.chassisNumber}"
                                  th:value="${cars.chassisNumber}">
                         </option>
                     </select>
                 </div>
             </div>
-            <p><input type="submit" value="Gem" class="buttom"/> <input type="reset" value="Nulstil feltet" class="buttom" /></p>
-            <a href="homepage">
-                <button class="buttom">Hjem</button>
-            </a>
+            <input type="submit" value="Gem" class="buttom"/>
+            <input type="reset" value="Nulstil feltet" class="buttom" />
+
         </form>
     </div>
 </div>
