--- a/src/main/resources/templates/fragments/navigator.html
+++ b/src/main/resources/templates/fragments/navigator.html
@@ -14,8 +14,8 @@
 
         <nav class="side-nav">
 
-            <div class="nav-valg ">
-                <a id="homelogo" href="homepage">
+            <div class="homepage">
+                <a  href="homepage">
                     <img id="home"  src="pictures/homethree.png">
                 </a>
             </div>
